// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Badge /> renders correctly 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-transform: uppercase;
  font-weight: bold;
  border-radius: 0.26667rem;
  background-color: #abb3b3;
  color: #0c0d0d;
  padding-left: 0.4rem;
  padding-right: 0.4rem;
  font-size: 0.8rem;
  line-height: 1.6rem;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
}

<span
  className="emotion-0 emotion-1"
  size="medium"
  type="default"
>
  Hello World
</span>
`;

exports[`<Badge /> renders correctly with danger type 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-transform: uppercase;
  font-weight: bold;
  border-radius: 0.26667rem;
  background-color: #b93435;
  color: #fff;
  padding-left: 0.4rem;
  padding-right: 0.4rem;
  font-size: 0.8rem;
  line-height: 1.6rem;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
}

<span
  className="emotion-0 emotion-1"
  size="medium"
  type="danger"
>
  Hello World
</span>
`;

exports[`<Badge /> renders correctly with default type 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-transform: uppercase;
  font-weight: bold;
  border-radius: 0.26667rem;
  background-color: #abb3b3;
  color: #0c0d0d;
  padding-left: 0.4rem;
  padding-right: 0.4rem;
  font-size: 0.8rem;
  line-height: 1.6rem;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
}

<span
  className="emotion-0 emotion-1"
  size="medium"
  type="default"
>
  Hello World
</span>
`;

exports[`<Badge /> renders correctly with important type 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-transform: uppercase;
  font-weight: bold;
  border-radius: 0.26667rem;
  background-color: #2875c6;
  color: #fff;
  padding-left: 0.4rem;
  padding-right: 0.4rem;
  font-size: 0.8rem;
  line-height: 1.6rem;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
}

<span
  className="emotion-0 emotion-1"
  size="medium"
  type="important"
>
  Hello World
</span>
`;

exports[`<Badge /> renders correctly with info type 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-transform: uppercase;
  font-weight: bold;
  border-radius: 0.26667rem;
  background-color: #5187e0;
  color: #fff;
  padding-left: 0.4rem;
  padding-right: 0.4rem;
  font-size: 0.8rem;
  line-height: 1.6rem;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
}

<span
  className="emotion-0 emotion-1"
  size="medium"
  type="info"
>
  Hello World
</span>
`;

exports[`<Badge /> renders correctly with success type 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-transform: uppercase;
  font-weight: bold;
  border-radius: 0.26667rem;
  background-color: #35b858;
  color: #fff;
  padding-left: 0.4rem;
  padding-right: 0.4rem;
  font-size: 0.8rem;
  line-height: 1.6rem;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
}

<span
  className="emotion-0 emotion-1"
  size="medium"
  type="success"
>
  Hello World
</span>
`;

exports[`<Badge /> renders correctly with warning type 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-transform: uppercase;
  font-weight: bold;
  border-radius: 0.26667rem;
  background-color: #f39c26;
  color: #494c4c;
  padding-left: 0.4rem;
  padding-right: 0.4rem;
  font-size: 0.8rem;
  line-height: 1.6rem;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
}

<span
  className="emotion-0 emotion-1"
  size="medium"
  type="warning"
>
  Hello World
</span>
`;

exports[`<Badge /> renders pill variant 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-transform: uppercase;
  font-weight: bold;
  border-radius: 0.26667rem;
  background-color: #abb3b3;
  color: #0c0d0d;
  padding-left: 0.4rem;
  padding-right: 0.4rem;
  font-size: 0.8rem;
  line-height: 1.6rem;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  padding-left: 0.8rem;
  padding-right: 0.8rem;
  border-radius: 10rem;
}

<span
  className="emotion-0 emotion-1"
  size="medium"
  type="default"
>
  Hello World
</span>
`;

exports[`<Badge /> renders small variant 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-transform: uppercase;
  font-weight: bold;
  border-radius: 0.26667rem;
  background-color: #abb3b3;
  color: #0c0d0d;
  padding-left: 0.4rem;
  padding-right: 0.4rem;
  font-size: 0.53333rem;
  line-height: 1.2rem;
  -webkit-letter-spacing: 0.06667rem;
  -moz-letter-spacing: 0.06667rem;
  -ms-letter-spacing: 0.06667rem;
  letter-spacing: 0.06667rem;
}

<span
  className="emotion-0 emotion-1"
  size="small"
  type="default"
>
  Hello World
</span>
`;

exports[`<Badge /> renders with custom background and text color 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-transform: uppercase;
  font-weight: bold;
  border-radius: 0.26667rem;
  background-color: #abb3b3;
  color: #0c0d0d;
  padding-left: 0.4rem;
  padding-right: 0.4rem;
  font-size: 0.8rem;
  line-height: 1.6rem;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  background-color: #ddd;
  color: #222;
}

<span
  className="emotion-0 emotion-1"
  color="#222"
  size="medium"
  type="default"
>
  Hello World
</span>
`;

exports[`<Badge /> renders with custom background only 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-transform: uppercase;
  font-weight: bold;
  border-radius: 0.26667rem;
  background-color: #abb3b3;
  color: #0c0d0d;
  padding-left: 0.4rem;
  padding-right: 0.4rem;
  font-size: 0.8rem;
  line-height: 1.6rem;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  background-color: #ddd;
}

<span
  className="emotion-0 emotion-1"
  size="medium"
  type="default"
>
  Hello World
</span>
`;

exports[`<Badge /> renders with custom text color only 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-transform: uppercase;
  font-weight: bold;
  border-radius: 0.26667rem;
  background-color: #abb3b3;
  color: #0c0d0d;
  padding-left: 0.4rem;
  padding-right: 0.4rem;
  font-size: 0.8rem;
  line-height: 1.6rem;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  color: #222;
}

<span
  className="emotion-0 emotion-1"
  color="#222"
  size="medium"
  type="default"
>
  Hello World
</span>
`;
